fe/templates/music-release-notifier-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      name: fe
      labels:
        app: fe
    spec:
      containers:
        - name: fe
          image: huibvstraten/music-release-notifier-fe:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4200
              protocol: TCP
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: NodePort
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      nodePort: 30000
