fe/templates/music-release-notifier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mrn.com
    - http:
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            pathType: Exact
            path: /
